Fixed response status code for existing user
