# bci-api/router/user_router.js
@@ -10,6 +10,7 @@ router.post('/', async function(req, res){
    const username = req.body.username;
    const password = req.body.password;
    const phone = req.body.phone;
+   console.log(req.body);
    if(
       !(firstname && lastname && username && password && phone) || 
       firstname.length > 32 || lastname.length > 32 || username.length > 32 ||
@@ -21,12 +22,13 @@ router.post('/', async function(req, res){
          firstname,
          lastname,
          username,
-         password
+         password,
+         phone
       )
       if(userData.status == 200){
          res.status(200).send(
             {
-               'token': userData.user.token
+               'token': userData.token
             }
          );
       } else {
