# doc/openapi.yaml
@@ -105,13 +105,13 @@ paths:
         "200":
           description: "Query was succesful"
         "400":
-          description: "Invalid date value"
+          description: "Invalid search parameter"
   /search/category/{category}:
     get:
       tags:
       - "search"
       summary: "Find items by category"
-      description: "Multiple status values can be provided with comma separated strings"
+      description: ""
       operationId: "findItemsByCategory"
       parameters:
       - name: "category"
@@ -122,16 +122,16 @@ paths:
           type: "string"
       responses:
         "200":
-          description: "successful operation"
+          description: "Query was succesful"
         "400":
-          description: "Invalid status value"
+          description: "Invalid search parameter"
   /search/location/{location}:
     get:
       tags:
       - "search"
-      summary: "Find pet by ID"
-      description: "Returns a single pet"
-      operationId: "getPetById"
+      summary: "Find items by location"
+      description: ""
+      operationId: "getitemsByLocation"
       parameters:
       - name: "location"
         in: "path"
@@ -142,11 +142,9 @@ paths:
           example: "finland"
       responses:
         "200":
-          description: "successful operation"
+          description: "Query was succesful"
         "400":
-          description: "Invalid ID supplied"
-        "404":
-          description: "Pet not found"
+          description: "Invalid search parameter"
   /user:
     post:
       tags:
@@ -166,7 +164,9 @@ paths:
               schema:
                 $ref: '#/components/schemas/Token'
         401:
-          description: "Username or password is missing"
+          description: "User already exists"
+        400:
+          description: "Invalid user info"
   /user/login:
     post:
       tags:
@@ -213,14 +213,16 @@ components:
           maxLength: 64
         password:
           type: "string"
-          maxLength: 32
+          maxLength: 64
         phone:
           type: "string"
           maxLength: 16
-        userStatus:
-          type: "integer"
-          format: "int32"
-          description: "User Status"
+      required:
+      - username
+      - firstname
+      - lastname
+      - password
+      - phone
     LoginUser:
       type: "object"
       properties:
@@ -229,7 +231,7 @@ components:
           maxLength: 32
         password:
           type: "string"
-          maxLength: 32
+          maxLength: 64
       required:
       - username
       - password
